# hookfs

./: fuse  fuse3  hookfs.c  hookfs.conf.sample  meson.build  meson_options.txt
fuse-2.9.9/: passthrough.c
tests/etc/: hookfs.conf
tests/etc/hookfs/: release.sh  write.sh
tests/sbin/: mount.syspower
